add users and articles models and create relationships between them

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,6 @@
-<button class="btn btn-success">Testing</button>
+<div class="jumbotron">
+  <h1>Welcome to the site</h1>
+</div>
 <h1>Listing all articles</h1>
 
 <table>
