--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container-fluid">
-  <nav class="navbar navbar-dark bg-inverse">Blog</nav>
+  <nav class="navbar navbar-light">Blog</nav>
 <%= yield %>
 </div>
 </body>
