--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,48 +3,22 @@
   <%= @article.title %>
 </p>
 
-<p>
-  <strong>Text:</strong>
-  <%= @article.text %>
-</p>
 
 <p>
   <strong>Created At:</strong>
   <%= @article.created_at %>
 </p>
 
+<p>
+  <strong>Text:</strong>
+  <%= @article.text %>
+</p>
 
-<!-- Show Comments -->
+
 <h2>Comments</h2>
-<% @article.comments.each do |comment| %>
-    <p>
-      <strong>Commenter:</strong>
-      <%= comment.commenter %>
-    </p>
+<%= render @article.comments %>
 
-    <p>
-      <strong>Comment:</strong>
-      <%= comment.body %>
-    </p>
-  <% end %>
-
- <!-- Add comments-->
 <h2>Add a comment:</h2>
-<%= form_for([@article, @article.comments.build]) do |f| %>
-    <p>
-      <%= f.label :commenter %> <br>
-      <%= f.text_field :commenter %>
-    </p>
-
-    <p>
-      <%= f.label :body %> <br>
-      <%= f.text_area :body %>
-    </p>
-
-    <p>
-      <%= f.submit %>
-    </p>
-<% end %>
+<%= render 'comments/form' %>
 
 <%= link_to 'Edit', edit_article_path(@article) %> | <%= link_to 'Back', articles_path %>
-<%= link_to 'Back', articles_path %>
