--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -1,5 +1,15 @@
 <%= javascript_include_tag 'application', 'data-turbolinks-track' => false %>
 
-<a href="#form">Form</a>
-<a href="#show">Show</a>
-<div class="ng-view"></div>
+
+<nav class="nav navbar-light bg-primary navbar-full">
+    <ul class="nav navbar-nav">
+        <li class="nav-item active">
+            <a class="nav-link" href="#form">Form</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#show">Show</a>
+        </li>
+    </ul>
+</nav>
+
+<div class="ng-view slide-animation"></div>
