--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -4,12 +4,18 @@
 <nav class="nav navbar-light bg-primary navbar-full">
     <ul class="nav navbar-nav">
         <li class="nav-item active">
-            <a class="nav-link" href="#form">Form</a>
+            <a class="nav-link" href="#new">New Entry</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#show">Show</a>
+            <a class="nav-link" href="#">Show</a>
         </li>
     </ul>
-</nav>
+</nav><br><br>
 
-<div class="ng-view slide-animation"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div ui-view="main" class="slide-animation col-md-4"></div>
+        <div ui-view="show" class="slide-animation col-md-8"></div>
+
+    </div>
+</div>
