--- a/app/views/static/show.html
+++ b/app/views/static/show.html
@@ -1,14 +1,3 @@
-<div class="row col-md-4">
-    <table class="table" ng-repeat="tester in test">
-        <thead>
-        <tr>
-            <th>{{ tester.title }}</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>{{ tester.text }}</td>
-        </tr>
-        </tbody>
-    </table>
-</div><!-- end div row-->
+<div ng-repeat="article in articles">
+    {{ article.text }}
+</div>
