--- a/app/views/static/show.html
+++ b/app/views/static/show.html
@@ -1,3 +1,4 @@
-<div ng-repeat="article in articles">
-    {{ article.text }}
-</div>
+    <div ng-init="text = $scope.articleText"></div>
+    <input type="text" ng-model="text">
+Welcome.
+    {{ text }}
