--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -14,8 +14,6 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div ui-view="main" class="slide-animation col-md-4"></div>
-        <div ui-view="show" class="slide-animation col-md-8"></div>
-
+        <div ui-view="main" class="slide-animation"></div>
     </div>
 </div>
