--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,8 @@
 <nav class="nav navbar-light bg-primary navbar-full">
   <ul class="nav navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" ui-sref="home">Home</a>
+    </li>
     <li class="nav-item active">
       <a class="nav-link" ui-sref="articles">Articles</a>
     </li>
