--- a/public/templates/articles.html
+++ b/public/templates/articles.html
@@ -1,27 +1,27 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-12">
-
-
             <a id="top"></a>
-            <div class="col-md-4">
-                <table class="table" ng-repeat="article in articles">
-                    <thead>
-                    <tr>
-                        <th><a href="#" ng-Click="getArticle(article.id); ">{{ article.title }}</a><br>
-                            <small>Created on: {{ article.created_at | date }}</small>
-                        </th>
-                    </tr>
+            <div class="col-sm-12 col-md-12">
+                <div class="col-md-10 col-md-offset-1">
+                <table class="table table-striped table-bordered" ng-repeat="article in articles">
+                     <thead>
+                         <tr>
+                            <th>
+                                <h2><a href="#" ng-Click="getArticle(article.id); ">{{ article.title }}</a></h2>
+                                <small>Created on: {{ article.created_at | date }}</small>
+                            </th>
+                         </tr>
                     </thead>
                     <tbody>
                     <tr>
-                        <td>{{ article.description }}</td>
+                        <td>{{ article.text }}</td>
                     </tr>
                     </tbody>
                 </table>
+                </div> <!-- END COL-MD-8-->
             </div>
 
             <div class="col-md-8 col-md-offset-4" style="position:fixed">{{ articleText }}</div>
-
-            abc
+</div>
+    </div>
