--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,13 +1,13 @@
-<nav class="nav navbar-light bg-primary navbar-full">
+<nav class="navbar navbar-dark bg-inverse">
   <ul class="nav navbar-nav">
     <li class="nav-item">
       <a class="nav-link" ui-sref="home">Home</a>
     </li>
-    <li class="nav-item active">
+    <li class="nav-item">
       <a class="nav-link" ui-sref="articles">Articles</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" ui-sref="portfolio">Portfolio</a>
     </li>
   </ul>
-</nav><br><br>
+</nav>
