--- a/public/templates/portfolio.html
+++ b/public/templates/portfolio.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
-            Whooaaa!
+            Thank you for checking out my portfolio page.
         </div>
     </div>
 </div>
