--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,13 +1,16 @@
 <nav class="navbar navbar-dark bg-inverse">
   <ul class="nav navbar-nav">
+    <li class="nav-item"><%= link_to '', articles_path, class: 'fa fa-home' %></li>
     <li class="nav-item">
-      <a class="nav-link" ui-sref="home">Home</a>
+
+      <%= link_to "Articles", articles_path, class: 'nav-link'%>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" ui-sref="articles">Articles</a>
-    </li>
+
     <li class="nav-item">
       <a class="nav-link" ui-sref="portfolio">Portfolio</a>
     </li>
+
+    <li class="nav-item"><%= link_to "New Article", new_article_path, class: 'nav-link' %></li>
+
   </ul>
 </nav>
