--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,10 @@
     </div>
   </div>
 
-    <div ui-view class="slide-animation"></div>
+    <!--<div ui-view class="slide-animation"></div>-->
+    <div class="container-fluid">
+      <%= yield %>
+    </div>
 
 </body>
 </html>
