--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark bg-inverse">
   <ul class="nav navbar-nav">
-    <li class="nav-item"><%= link_to '', articles_path, class: 'fa fa-home' %></li>
+    <li class="nav-item"><%= link_to '', articles_path, class: 'nav-link fa fa-home fa-2x' %></li>
     <li class="nav-item">
 
       <%= link_to "Articles", articles_path, class: 'nav-link'%>
