working with devise

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,10 +9,10 @@
     <table>
         <thead>
           <tr>
-            <th><%= article.title %></th>
+            <th><h2><%= article.title %></h2></th>
           </tr>
           <tr>
-            <th><%= article.created_at %></th>
+            <th><%= article.created_at_f %></th>
           </tr>
         </thead>
         <tbody>
