--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -9,11 +9,11 @@
     </div>
   </div>
 
-  <div class="row">
-      <div class="col-xs-3 block" style="background-color: black; color: blue;"><h2>HTML</h2></div>
-      <div class="col-xs-3 block" style="background-color: black"><h2>CSS</h2></div>
-      <div class="col-xs-3 block" style="background-color: black"><h2>JS</h2></div>
-      <div class="col-xs-3 block" style="background-color: black; color: red;"><h2>RUBY</h2></div>
+  <div class="row language_blocks">
+      <div class="col-xs-3 block"><h2>HTML</h2></div>
+      <div class="col-xs-3 block"><h2>CSS</h2></div>
+      <div class="col-xs-3 block"><h2>JS</h2></div>
+      <div class="col-xs-3 block"><h2>RUBY</h2></div>
   </div>
 
 </section>
