--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,14 +3,14 @@
   <div class="col-lg-12 col-md-12 col-sm-12">
   <nav class="navbar navbar-dark">
   <ul class="nav navbar-nav">
-    <li class="nav-item"><%= link_to '', root_path, class: 'nav-link fa fa-home fa-3x' %></li>
+    <li class="nav-item"><%= link_to '', root_path, class: 'nav-link fa fa-home fa-2x' %></li>
     <li class="nav-item">
 
-      <%= link_to "Articles", articles_path, class: 'nav-link'%>
+      <%= link_to " Articles", articles_path, class: 'nav-link fa fa-gears'%>
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" ui-sref="portfolio">Portfolio</a>
+      <%= link_to " Portfolio", portfolio_pieces_path, class: 'nav-link fa fa-briefcase' %>
     </li>
 
 
