--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,12 @@
 
 </head>
 <body>
-  <%= render 'layouts/navbar' %>
-  <%= yield %>
+  <section class="container">
+    <%= render 'layouts/navbar' %>
+  </section>
+
+  <section class="container">
+    <%= yield %>
+  </section>
 </body>
 </html>
