--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,21 +1,18 @@
-<div class="container-fluid">
-  <div class="row">
+<div class="row">
   <div class="col-lg-12 col-md-12 col-sm-12">
-  <nav class="navbar navbar-dark">
-  <ul class="nav navbar-nav">
-    <li class="nav-item"><%= link_to '', root_path, class: 'nav-link fa fa-home fa-2x' %></li>
-    <li class="nav-item">
+    <nav class="navbar navbar-dark">
+      <ul class="nav navbar-nav">
+        <li class="nav-item"><%= link_to 'Home', root_path, class: 'nav-link fa fa-home' %></li>
+        <li class="nav-item">
 
-      <%= link_to " Articles", articles_path, class: 'nav-link fa fa-gears'%>
-    </li>
+          <%= link_to " Articles", articles_path, class: 'nav-link fa fa-star'%>
+        </li>
 
-    <li class="nav-item">
-      <%= link_to " Portfolio", portfolio_pieces_path, class: 'nav-link fa fa-briefcase' %>
-    </li>
+        <li class="nav-item">
+          <%= link_to " Portfolio", portfolio_pieces_path, class: 'nav-link fa fa-briefcase' %>
+        </li>
 
-
-  </ul>
-</nav>
+      </ul>
+    </nav>
   </div>
-</div>
 </div>
