added cards and lists for layouts

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,6 +25,8 @@ body {
   background-color: black;
 }
 
+
+
 h2 {
   color: blue;
 }
@@ -38,7 +40,8 @@ h2 {
 }
 
 .intro_section {
-  background: black;
+  background-color: black;
+  width: 100%;
 
 }
 
