--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-lg-12 col-md-12 col-sm-12">
-    <nav class="navbar navbar-dark">
+    <nav class="navbar navbar-full navbar-dark">
       <ul class="nav navbar-nav">
         <li class="nav-item"><%= link_to 'Home', root_path, class: 'nav-link fa fa-home' %></li>
         <li class="nav-item">
