--- a/app/views/portfolio_pieces/_form.html.erb
+++ b/app/views/portfolio_pieces/_form.html.erb
@@ -16,4 +16,6 @@
 <div class="form-group">
   <%= f.label :description, 'Description', class: 'control-label' %>
   <%= f.text_field :description, class: 'form-control' %>
-</div>
+</div> <br>
+
+<%= f.submit class: 'btn btn-success' %>
