--- a/app/views/portfolio_pieces/index.html.erb
+++ b/app/views/portfolio_pieces/index.html.erb
@@ -3,11 +3,10 @@
   <% @portfolio.each do |portfolio| %>
     <div class="col-md-4">
       <div class="card">
-        <img class="card-img-top" data-src="..." alt="Card image cap">
+        <div class="card-header"><h4 class="card-title"><%= portfolio.site_name %></h4></div>
         <div class="card-block">
-          <h4 class="card-title"><%= portfolio.site_name %></h4>
           <p class="card-text"><%= portfolio.description %></p>
-          <%= link_to "Visit Site", root_path, class: 'btn btn-success' %>
+          <%= link_to "Visit Site", "#{portfolio.site_link}", class: 'btn btn-success' %>
 
         </div>
       </div>
